--- a/Project/src/templates/signup.html
+++ b/Project/src/templates/signup.html
@@ -1,4 +1,7 @@
-<!--TODO: Change colours, link forms-->
+<!--TODO: Edit form to collect goal information, name etc.
+        - Change colours
+        - Add actions to buttons to submit information
+        - Clean up unnecessary css -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,7 +9,7 @@
 	<title>Best Fit - Login </title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
+<!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="../static/images/icons/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="../static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
@@ -15,13 +18,13 @@
 <!--===============================================================================================-->
 </head>
 <body>
-	
+
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
                 <form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Login
+						SignUp
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid Student ID is required: 123456789">
@@ -29,31 +32,25 @@
 						<span class="focus-input100"></span>
 					</div>
 
-					<div class="wrap-input100 validate-input" data-validate = "Password is required">
+                    	<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+						<input class="input100" type="text" name="email" placeholder="Email Address">
+						<span class="focus-input100"></span>
+					</div>
+
+					<div class="wrap-input100 validate-input" >
 						<input class="input100" type="password" name="pass" placeholder="Password">
 						<span class="focus-input100"></span>
 					</div>
 
-                    <div class="text-center p-t-5">
-						<span class="txt1">
-							Forgot
-						</span>
-						<a class="txt2" href="#">
-							Password?
-						</a>
-					</div>
-					
-					<div class="container-login100-form-btn">
-						<button class="btn">
-							Login
-						</button>
+                    <div class="wrap-input100 validate-input" >
+						<input class="input100" type="confirm-password" name="cpass" placeholder="Confirm Password">
+						<span class="focus-input100"></span>
 					</div>
 
-					<div class="text-center p-t-12">
-						<a class="txt2" href="signup">
-							Create your Account
-							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
-						</a>
+					<div class="container-login100-form-btn">
+						<button class="btn">
+							Sign Up
+						</button>
 					</div>
 				</form>
 			</div>
