--- a/Project/src/static/css/main.css
+++ b/Project/src/static/css/main.css
@@ -1,5 +1,197 @@
 /*TODO: Clean up code */
 
+   /*Clearing Floats*/
+    .cf:before, .cf:after{
+        content:"";
+        display:table;
+    }
+
+    .cf:after{
+        clear:both;
+    }
+
+    .cf{
+        zoom:1;
+    }
+
+    /* Form wrapper styling */
+    .search-wrapper {
+        width: 290px;
+        margin: 1px auto 10px auto;
+        border-radius: 30px;
+		background: transparent;
+        box-shadow: 0 4px 20px -2px #e9e9e9;
+    }
+
+	/* Form text input */
+    .search-wrapper input {
+      padding-left: 20px;
+        width: 190px;
+        height: 38px;
+        /*padding: 10px 5px;*/
+        float: left;
+        font: bold 13px 'lucida sans', 'trebuchet MS', 'Tahoma';
+        border: 0;
+        background: #fff;
+        border-radius: 40px;
+        border-top-style: none;
+    }
+
+    .search-wrapper input:focus {
+        outline: 0;
+        background: #fff;
+        box-shadow: 0 0 2px rgba(0,0,0,0.8) inset;
+    }
+
+    .search-wrapper input::-webkit-input-placeholder {
+       color: #999;
+       font-weight: normal;
+       font-style: italic;
+		padding-left: 20px;
+    }
+
+    .search-wrapper input:-moz-placeholder {
+        color: #999;
+        font-weight: normal;
+        font-style: italic;
+    }
+
+    .search-wrapper input:-ms-input-placeholder {
+        color: #999;
+        font-weight: normal;
+        font-style: italic;
+		border-style: none;
+    }
+
+    /* Form submit button */
+    .search-wrapper button {
+        overflow: visible;
+        position: relative;
+        float: right;
+        border: 0;
+        padding: 0;
+        cursor: pointer;
+        height: 40px;
+        width: 90px;
+        font: 13px/40px 'lucida sans', 'trebuchet MS', 'Tahoma';
+        color: #fff;
+        text-transform: uppercase;
+        background: #696969; ;
+        border-radius: 40px;
+    }
+
+    .search-wrapper button:hover{
+         background: #696969;
+    }
+
+    .search-wrapper button:active,
+    .search-wrapper button:focus{
+        background: #CCC;
+        outline: 0;
+    }
+
+    .search-wrapper button:focus:before,
+    .search-wrapper button:active:before{
+            border-right-color: #696969;
+    }
+
+/*Clearing Floats*/
+    .newsearch:before, .newsearch:after{
+        content:"";
+        display:table;
+    }
+
+    .newsearch:after{
+        clear:both;
+    }
+
+    .newsearch{
+        zoom:1;
+    }
+
+    /* Form wrapper styling */
+    .newsearch {
+        width: 290px;
+        margin: 10px auto 5px auto;
+        border-radius: 30px;
+		background: transparent;
+        /*box-shadow: 0 4px 20px -2px #e9e9e9;*/
+    }
+
+	/* Form text input */
+    .newsearch input {
+      padding-left: 20px;
+        width: 190px;
+        height: 38px;
+        /*padding: 10px 5px;*/
+        float: left;
+        font: bold 13px 'lucida sans', 'trebuchet MS', 'Tahoma';
+        border: 0;
+        background: #fff;
+        border-radius: 40px;
+        border-top-style: none;
+    }
+
+    .newsearch input:focus {
+        outline: 0;
+        background: #fff;
+        box-shadow: 0 0 2px rgba(0,0,0,0.8) inset;
+    }
+
+    .newsearch input::-webkit-input-placeholder {
+       color: #999;
+       font-weight: normal;
+       font-style: italic;
+		padding-left: 20px;
+    }
+
+    .newsearch input:-moz-placeholder {
+        color: #999;
+        font-weight: normal;
+        font-style: italic;
+    }
+
+    .newsearch input:-ms-input-placeholder {
+        color: #999;
+        font-weight: normal;
+        font-style: italic;
+		border-style: none;
+    }
+
+    /* Form submit button */
+    .newsearch button {
+        overflow: visible;
+        position: relative;
+        float: right;
+        border: 0;
+        padding: 0;
+        cursor: pointer;
+        height: 40px;
+        width: 90px;
+        font: 13px/40px 'lucida sans', 'trebuchet MS', 'Tahoma';
+        color: #fff;
+        text-transform: uppercase;
+        background: #696969; ;
+        border-radius: 40px;
+    }
+
+    .newsearch button:hover{
+         background: #696969;
+    }
+
+    .newsearch button:active,
+    .newsearch button:focus{
+        background: #CCC;
+        outline: 0;
+    }
+
+    .newsearch button:focus:before,
+    .newsearch button:active:before{
+            border-right-color: #696969;
+    }
+
+
+
 /*//////////////////////////////////////////////////////////////////
 [ FONT ]*/
 
