--- a/Project/src/templates/home.html
+++ b/Project/src/templates/home.html
@@ -27,13 +27,13 @@
       <a class="navbar-brand" href="#">Best Fit</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="home.html">Home</a></li>
-      <li><a href="workouts.html">Workouts and Programs</a></li>
+      <li class="active"><a href="home">Home</a></li>
+      <li><a href="workouts">Workouts and Programs</a></li>
       <li><a href="#">About Us</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-        <li><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        <li><a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
 
     </ul>
   </div>
