--- a/Project/src/templates/aboutus.html
+++ b/Project/src/templates/aboutus.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en" class="no_background_image">
 <head>
-	<title> Workout Programs | Best Fit </title>
+	<title> About Us | Best Fit </title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -48,7 +48,7 @@
 
 <br>
 
-<h1> Workouts and Programs
+<h1> About Us
     <form class="search-wrapper cf" style="float:right">
         <input type="text" placeholder="Search here ..." required style="box-shadow: none;">
         <button type="submit">Search</button>
