--- a/Project/src/templates/signup.html
+++ b/Project/src/templates/signup.html
@@ -6,7 +6,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Best Fit - Login </title>
+	<title> Sign Up | Best Fit </title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->
@@ -24,7 +24,7 @@
 			<div class="wrap-login100">
                 <form class="login100-form validate-form">
 					<span class="login100-form-title">
-						SignUp
+						Sign Up
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate = "Valid Student ID is required: 123456789">
