--- a/Project/src/templates/home.html
+++ b/Project/src/templates/home.html
@@ -24,14 +24,14 @@
 <!--===============================================================================================-->
 
 </head>
-<body class=" landing">
+<body class=" logo_background">
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Best Fit</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="home">Home</a></li>
+      <li class="active"><a href="/">Home</a></li>
       <li><a href="workouts">Workouts and Programs</a></li>
       <li><a href="aboutus">About Us</a></li>
     </ul>
