--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -1,7 +1,7 @@
 <!--TODO: Everything lol -->
 
 <!DOCTYPE html>
-<html lang="en" class="no_background_image">
+<html lang="en" >
 <head>
 	<title> Workout Programs | Best Fit </title>
 	<meta charset="UTF-8">
@@ -21,14 +21,14 @@
 </style>
 
 </head>
-<body class=" landing">
+<body>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Best Fit</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="home">Home</a></li>
+      <li class="active"><a href="/">Home</a></li>
       <li><a href="workouts">Workouts and Programs</a></li>
       <li><a href="aboutus">About Us</a></li>
 	  <!--
@@ -53,6 +53,33 @@
         <input type="text" placeholder="Search here ..." required style="box-shadow: none;">
         <button type="submit">Search</button>
     </form></h1>
+    <p>
+       <div>
+        <table>
+          <thead>
+                <tr>
+                    <th>Exercise</th>
+                    <th>Equipment</th>
+                    <th>Exercise Type</th>
+                    <th>Major Muscle</th>
+                    <th>Minor Muscle</th>
+                </tr>
+            </thead>
+          <tbody>
+                {% for e in exerciselist %}
+                <tr>
+                    <td>{{e.exerciseName}}</td>
+                    <td>{{e.equipment}}</td>
+                    <td>{{e.exerciseType}}</td>
+                    <td>{{e.majorMuscle}}</td>
+                    <td>{{e.minorMuscle}}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+      </div>
+
+    </p>
 
 </body>
 </html>
