--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -18,6 +18,58 @@
 
 <style>
  /* Moved to main.css*/
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.flip-card {
+  background-color: transparent;
+  width: 300px;
+  height: 300px;
+  padding: 10px;
+}
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.5s;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-card-back {
+  background-color: black;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.card-container {
+display: flex;
+flex-wrap: wrap;
+padding: 5px;
+background-color: black;
+}
+
 </style>
 
 </head>
@@ -53,32 +105,29 @@
         <input type="text" placeholder="Search here ..." required style="box-shadow: none;">
         <button type="submit">Search</button>
     </form></h1>
-    <p>
-       <div>
-        <table>
-          <thead>
-                <tr>
-                    <th>Exercise</th>
-                    <th>Equipment</th>
-                    <th>Exercise Type</th>
-                    <th>Major Muscle</th>
-                    <th>Minor Muscle</th>
-                </tr>
-            </thead>
-          <tbody>
-                {% for e in exerciselist %}
-                <tr>
-                    <td>{{e.exerciseName}}</td>
-                    <td>{{e.equipment}}</td>
-                    <td>{{e.exerciseType}}</td>
-                    <td>{{e.majorMuscle}}</td>
-                    <td>{{e.minorMuscle}}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-      </div>
 
+<!-- WORKOUT CARDS -->
+    <p>
+        <div class="card-container">
+        {% for e in exerciselist %}
+        <div class="flip-card">
+            <div class="flip-card-inner">
+                <div class="flip-card-front">
+                    <img src= {{e.example}} alt="Workout Demo" style="width:280px;height:280px;">
+                </div>
+                <div class="flip-card-back">
+                    <h1>{{e.exerciseName}}</h1>
+
+                    <p>{{e.equipment}}</p>
+                    <p>{{e.exerciseType}}</p>
+                    <p>{{e.majorMuscle}}</p>
+                    <p>{{e.minorMuscle}}</p>
+
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+        </div>
     </p>
 
 </body>
