Trying to get search to work

--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -92,11 +92,6 @@ body {
 
 </style>
 
-<script>
-<!--JAVASCRIPT FLIP ON CLICK CODE -->
-
-</script>
-
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -164,6 +159,6 @@ body {
         {% endfor %}
         </div>
     </p>
-
+    <script src="../static/js/test.js"></script>
 </body>
 </html>
