--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -77,8 +77,8 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(29, 106, 154, 0.72);
-  color: #fff;
+  background: rgba(170, 170, 170, .67);
+  color: black;
   visibility: hidden;
   opacity: 0;
   /* transition effect. not necessary */
@@ -121,9 +121,11 @@ body {
 <br>
 
 <h1> Workouts and Programs
+
     <form class="search-wrapper cf" style="float:right">
         <input type="text" placeholder="Search here ..." required style="box-shadow: none;">
         <button type="submit">Search</button>
+
     </form></h1>
 
 <!-- WORKOUT CARDS -->
@@ -136,7 +138,7 @@ body {
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <img src= {{e.example}} alt="Workout Demo" style="width:300px;height:300px;">
-                    <p class="img_name"  style="font-size:15px">
+                    <p class="img_name"  style="font-size:25px">
                     <br>
                         {{e.exerciseName}}
                     </p>
