--- a/Project/src/templates/login.html
+++ b/Project/src/templates/login.html
@@ -50,7 +50,7 @@
 					</div>
 
 					<div class="text-center p-t-12">
-						<a class="txt2" href="signup">
+						<a class="txt2" href="signup.html">
 							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
