--- a/Project/src/templates/signup.html
+++ b/Project/src/templates/signup.html
@@ -22,7 +22,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-                <form class="login100-form validate-form">
+                <form class="login100-form validate-form" action="signup" method="POST" name="myForm">
 					<span class="login100-form-title">
 						Sign Up
 					</span>
@@ -48,7 +48,7 @@
 					</div>
 
 					<div class="container-login100-form-btn">
-						<button class="btn">
+						<button class="btn" type=button name="submit_id" id="btn_id" value="Submit" onclick="submitform()">
 							Sign Up
 						</button>
 					</div>
@@ -56,7 +56,9 @@
 			</div>
 		</div>
 	</div>
-	<script src="../static/js/main.js"></script>
+	<script >
+
+    </script>
 
 </body>
 </html>
