--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -108,17 +108,11 @@ body {
       <li class="active"><a href="/">Home</a></li>
       <li><a href="workouts">Workouts and Programs</a></li>
       <li><a href="aboutus">About Us</a></li>
-	  <!--
-        <li>
-    <form class="newsearch" style="float:right">
-        <input type="text" placeholder="Search workouts ...">
-        <button type="submit">Search</button>
-    </form></li> -->
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         <li><a href="signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-		<li><a href="#" style="font-size:15px"><span class="fa fa-fw fa-search"></span> Search</a> </li> <!--New Search Bar Code -->
+		<li><a href="#" style="font-size:15px"><span class="fa fa-fw fa-search"></span> Search</a> </li>
     </ul>
   </div>
 </nav>
@@ -143,8 +137,8 @@ body {
             <div class="flip-card-inner">
                 <div class="flip-card-front">
                     <div class="radioButton">
-                        <input id="workoutID" type="radio" name="workoutName" value="workout" />
-                        <img src= {{e.example}} alt="Workout Demo" style="width:300px;height:300px;">
+                        <input class=check id="workoutID" type="checkbox" name="workoutName" value="exercise{{e.exerciseId}}" />
+                        <img src= "{{e.example}}" alt="Workout Demo" style="width:300px; height:300px;" />
                         <p class="img_name"  style="font-size:25px">
                         <br>
                             {{e.exerciseName}}
