--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -90,10 +90,23 @@ body {
   opacity: 1;
 }
 
-.radioButton input{
+/*
+.checkboxButton input{
     position:absolute;
     z-index:999;
+} */
+
+.linkBtn {
+  border: none;
+  background-color: inherit;
+  padding: 14px 14px;
+  font-size: 16px;
+  cursor: pointer;
+  display: inline-block;
+  border-radius: 10px;
 }
+
+.linkBtn:hover {background: #eee;}
 
 </style>
 
@@ -130,8 +143,15 @@ body {
     <form class="search-wrapper cf" style="float:right">
         <input type="text" placeholder="Search here ..." required style="box-shadow: none;">
         <button type="submit">Search</button>
+    </form>
 
-    </form></h1>
+    <p style="text-align: center">
+        <br> <br>
+        <button class="linkBtn" onclick="window.location.href='routine.html';"> Create a New Workout Routine </button>
+        <!--<a href="routine.html" class="button">Click Here</a> -->
+    </p>
+
+</h1>
 
 <!-- WORKOUT CARDS -->
     <p>
@@ -142,14 +162,16 @@ body {
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <div class="radioButton">
-                        <input id="workoutID" type="radio" name="workoutName" value="workout" />
+                    <!--
+                    <div class="checkboxButton">
+                        <input id="workoutID" type="checkbox" name="workoutName" value="workout" /> -->
                         <img src= {{e.example}} alt="Workout Demo" style="width:300px;height:300px;">
                         <p class="img_name"  style="font-size:25px">
                         <br>
                             {{e.exerciseName}}
                         </p>
-                    </div>
+                <!--
+                    </div> -->
                 </div>
                 <div class="flip-card-back">
                     <br>
@@ -172,3 +194,5 @@ body {
     <script src="../static/js/test.js"></script>
 </body>
 </html>
+
+
