--- a/Project/src/templates/routine.html
+++ b/Project/src/templates/routine.html
@@ -27,7 +27,7 @@
 
         .openButton:hover {background: #eee;}
 
-        /* Button used to open the contact form - fixed at the bottom of the page */
+        /* Button used to open the contact form - fixed at the bottom of the page
         .open-button {
           background-color: #555;
           color: white;
@@ -38,14 +38,12 @@
           position: absolute;
           margin: auto;
 
-        }
+        }*/
 
         /* The popup form - hidden by default */
         .form-popup {
           display: none;
-          /*position: fixed;*/
-          position: absolute;
-          /*bottom: 0;*/
+
           right: 15px;
           border: 3px solid #f1f1f1;
           z-index: 9;
@@ -56,7 +54,7 @@
 
         /* Add styles to the form container */
         .form-container {
-          max-width: 300px;
+          width: auto;
           padding: 20px;
           background-color: white;
         }
@@ -144,7 +142,7 @@
 
 </h1>
 
-<div class="form-popup" id="myForm">
+<div class="form-popup" id="myForm" style="width:95%;">
   <form action="/action_page.php" class="form-container" >
     <h2 style="text-align: center">New Workout Routine</h2>
 
