--- a/Project/src/templates/aboutus.html
+++ b/Project/src/templates/aboutus.html
@@ -30,6 +30,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="home">Home</a></li>
       <li><a href="workouts">Workouts and Programs</a></li>
+      <li><a href="routine">Workout Routines</a></li>
       <li><a href="aboutus">About Us</a></li>
 	  <!--
         <li>
