--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -120,6 +120,7 @@ body {
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
       <li><a href="workouts">Workouts and Programs</a></li>
+      <li><a href="routine">Workout Routines</a></li>
       <li><a href="aboutus">About Us</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
