--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -90,13 +90,13 @@ body {
   opacity: 1;
 }
 
-<<<<<<< Updated upstream
+
 /*
 .checkboxButton input{
-=======
-<<<<<<< Updated upstream
+
+
 .radioButton input{
->>>>>>> Stashed changes
+
     position:absolute;
     z-index:999;
 } */
@@ -110,7 +110,7 @@ body {
   display: inline-block;
   border-radius: 10px;
 }
-=======
+
 /*
 .checkboxButton input{
     position:absolute;
@@ -128,7 +128,6 @@ body {
 }
 
 .linkBtn:hover {background: #eee;}
->>>>>>> Stashed changes
 
 .linkBtn:hover {background: #eee;}
 
@@ -144,6 +143,7 @@ body {
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
       <li><a href="workouts">Workouts and Programs</a></li>
+      <li><a href="routine">Workout Routines</a></li>
       <li><a href="aboutus">About Us</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
@@ -161,32 +161,27 @@ body {
     <form class="search-wrapper cf" style="float:right">
         <input type="text" placeholder="Search here ..." required style="box-shadow: none;">
         <button type="submit">Search</button>
-<<<<<<< Updated upstream
+
     </form>
 
-    <p style="text-align: center">
-        <br> <br>
-        <button class="linkBtn" onclick="window.location.href='routine.html';"> Create a New Workout Routine </button>
-        <!--<a href="routine.html" class="button">Click Here</a> -->
-    </p>
 
+     <p style="text-align: center">
+        <br> <br>
+        <form class="login100-form validate-form" action="/routine" method="GET">
+        <button class="linkBtn" onclick='/routine.html'> Create a New Workout Routine </button>
+        <!--<a href="routine.html" class="button">Click Here</a> -->
+    </form>
+ </p>
 </h1>
-=======
-<<<<<<< Updated upstream
+
 
     </form></h1>
-=======
+
     </form>
 
-    <p style="text-align: center">
-        <br> <br>
-        <button class="linkBtn" onclick="window.location.href='routine.html';"> Create a New Workout Routine </button>
-        <!--<a href="routine.html" class="button">Click Here</a> -->
-    </p>
 
 </h1>
->>>>>>> Stashed changes
->>>>>>> Stashed changes
+
 
 <!-- WORKOUT CARDS -->
     <p>
@@ -197,37 +192,29 @@ body {
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-<<<<<<< Updated upstream
-=======
-<<<<<<< Updated upstream
+
                     <div class="radioButton">
                         <input class=check id="workoutID" type="checkbox" name="workoutName" value="exercise{{e.exerciseId}}" />
                         <img src= "{{e.example}}" alt="Workout Demo" style="width:300px; height:300px;" />
-=======
->>>>>>> Stashed changes
+
                     <!--
                     <div class="checkboxButton">
                         <input id="workoutID" type="checkbox" name="workoutName" value="workout" /> -->
                         <img src= {{e.example}} alt="Workout Demo" style="width:300px;height:300px;">
-<<<<<<< Updated upstream
-=======
->>>>>>> Stashed changes
->>>>>>> Stashed changes
+
                         <p class="img_name"  style="font-size:25px">
                         <br>
                             {{e.exerciseName}}
                         </p>
-<<<<<<< Updated upstream
+
                 <!--
                     </div> -->
-=======
-<<<<<<< Updated upstream
+
                     </div>
-=======
+
                 <!--
                     </div> -->
->>>>>>> Stashed changes
->>>>>>> Stashed changes
+
                 </div>
                 <div class="flip-card-back">
                     <br>
