--- a/Project/src/templates/routine.html
+++ b/Project/src/templates/routine.html
@@ -169,6 +169,12 @@
           visibility: visible;
           opacity: 1;
         }
+
+        /*CHECK BOX CODE*/
+        .checkboxButton input{
+            position:absolute;
+            z-index:999;
+        }
     </style>
 
 </head>
@@ -223,6 +229,9 @@
   <form action="/action_page.php" class="form-container" >
     <h2 style="text-align: center">New Workout Routine</h2>
 
+    <br> <br>
+    <h4 style="text-align: center"> <b> Please select the workouts you would like to add to your routine: </b> </h4>
+
     <!-- WORKOUT CARDS -->
     <p>
         <br>
@@ -232,16 +241,14 @@
         <div class="flip-card">
             <div class="flip-card-inner">
                 <div class="flip-card-front">
-                    <!--
                     <div class="checkboxButton">
-                        <input id="workoutID" type="checkbox" name="workoutName" value="workout" /> -->
+                        <input id="workoutID" type="checkbox" name="workoutName" value="workout" />
                         <img src= {{e.example}} alt="Workout Demo" style="width:150px;height:150px;">
-                        <p class="img_name"  style="font-size:20px">
+                        <p class="img_name"  style="font-size:20px; text-align:center;">
                         <br>
                             {{e.exerciseName}}
                         </p>
-                <!--
-                    </div> -->
+                    </div>
                 </div>
                 <!--
                 <div class="flip-card-back">
