--- a/Project/src/templates/routine.html
+++ b/Project/src/templates/routine.html
@@ -172,7 +172,9 @@
 
         /*CHECK BOX CODE*/
         .checkboxButton input{
-            position:absolute;
+            position:fixed;
+            left:5px;
+            top:2px;
             z-index:999;
         }
     </style>
