Pop Up with Ayesha changes

--- a/Project/src/templates/routine.html
+++ b/Project/src/templates/routine.html
@@ -171,8 +171,10 @@
         }
 
         /*CHECK BOX CODE*/
-        .checkboxButton input{
-            position:absolute;
+         .checkboxButton input{
+            position:fixed;
+            left:5px;
+            top:2px;
             z-index:999;
         }
     </style>
