--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -140,10 +140,12 @@ body {
         <button type="submit">Search</button>
     </form>
 
-    <p style="text-align: center">
+    <p style="text-align: center;">
         <br> <br>
-        <button class="linkBtn" onclick="window.location.href='routine.html';"> Create a New Workout Routine </button>
-        <!--<a href="routine.html" class="button">Click Here</a> -->
+         <form class="login100-form validate-form" action="/routine" method="GET">
+            <button class="linkBtn" onclick='/routine.html'> Create a New Workout Routine </button>
+            <!--<a href="routine.html" class="button">Click Here</a> -->
+        </form>
     </p>
 
 </h1>
