Frontend+Backend Changes

--- a/Project/src/templates/workouts.html
+++ b/Project/src/templates/workouts.html
@@ -91,16 +91,6 @@ body {
 }
 
 
-/*
-.checkboxButton input{
-
-
-.radioButton input{
-
-    position:absolute;
-    z-index:999;
-} */
-
 .linkBtn {
   border: none;
   background-color: inherit;
@@ -110,24 +100,6 @@ body {
   display: inline-block;
   border-radius: 10px;
 }
-
-/*
-.checkboxButton input{
-    position:absolute;
-    z-index:999;
-} */
-
-.linkBtn {
-  border: none;
-  background-color: inherit;
-  padding: 14px 14px;
-  font-size: 16px;
-  cursor: pointer;
-  display: inline-block;
-  border-radius: 10px;
-}
-
-.linkBtn:hover {background: #eee;}
 
 .linkBtn:hover {background: #eee;}
 
@@ -162,26 +134,16 @@ body {
         <input type="text" placeholder="Search here ..." required style="box-shadow: none;">
         <button type="submit">Search</button>
 
-    </form>
+    </form> </h1>
 
 
-     <p style="text-align: center">
+     <p>
         <br> <br>
-        <form class="login100-form validate-form" action="/routine" method="GET">
-        <button class="linkBtn" onclick='/routine.html'> Create a New Workout Routine </button>
-        <!--<a href="routine.html" class="button">Click Here</a> -->
-    </form>
- </p>
-</h1>
-
-
-    </form></h1>
-
-    </form>
-
-
-</h1>
-
+        <form class="login100-form validate-form" action="/routine" method="GET" style="margin: auto;">
+            <button class="linkBtn" onclick='/routine.html'> Create a New Workout Routine </button>
+            <!--<a href="routine.html" class="button">Click Here</a> -->
+        </form>
+    </p>
 
 <!-- WORKOUT CARDS -->
     <p>
