--- a/Project/src/templates/login.html
+++ b/Project/src/templates/login.html
@@ -1,12 +1,12 @@
 <!--TODO: Change colours, link forms-->
 
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
 	<title> Login | Best Fit </title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<!--===============================================================================================-->	
+<!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="../static/images/icons/favicon.ico"/>
 	<link rel="stylesheet" type="text/css" href="../static/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
@@ -15,11 +15,11 @@
 <!--===============================================================================================-->
 </head>
 <body>
-	
+
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-                <form class="login100-form validate-form" action="/login" method = "POST">
+                <form class="login100-form validate-form">
 					<span class="login100-form-title">
 						Login
 					</span>
@@ -42,22 +42,15 @@
 							Password?
 						</a>
 					</div>
-					
+
 					<div class="container-login100-form-btn">
-						<input class="btn" type=submit name="login_id" id="btn_id" value="Login" onclick="Loginform()" >
+						<button class="btn">
 							Login
-						</input>
+						</button>
 					</div>
+
 					<div class="text-center p-t-12">
-<<<<<<< Updated upstream
-						<a class="txt2" href="/signup.html">
-=======
-<<<<<<< Updated upstream
 						<a class="txt2" href="signup.html">
-=======
-						<a class="txt2" href="/signup.html">
->>>>>>> Stashed changes
->>>>>>> Stashed changes
 							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
